# endothelial-pipeline

./: .gitignore  .pdm-python  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  check_updated_cdh5_feature_columns.py  check_updated_cell_centered_columns.py  check_updated_merged_columns.py  check_updated_nuc_feature_columns.py  check_updated_tracking_columns.py  config.yaml  config_alternative.yaml  dataset_log.csv  featured_functions.md  imports.txt  matplotlibrc  pdm.toml  pyproject.toml  rename_cdh5_feature_columns.py  rename_cell_centered_columns.py  rename_merged_columns.py  rename_nuc_feature_columns.py  rename_tracking_columns.py  requirements.txt  resave_existing_dataframes_with_integer_positions.py  save_dataframes_to_fms.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: data-handoff.yml  data_handoff.yaml  data_handoff_timelapse.yaml  data_handoff_timepoint.yaml  model-handoff.yaml
.github/scripts/: parse-issue-form.js
.github/workflows/: experiment.yml  parse-issue-form.yml  run-build-tests.yml  run-linting-checks.yml  test.yml
cellsmap/: cdh5_seg_config.yaml  config.yaml  data_config.yaml  dynamics_config.yaml  model_config.yaml
cellsmap/analyses/: 2D_highFlow_coeffs.npy  2D_highFlow_cost.npy  MAE_95pctVarPCs_all.npy  MAE_95pctVarPCs_highFlow.npy  MAE_95pctVarPCs_lowFlow.npy  README.md  analyze_feats.py  cdh5_nodes_and_edges_analysis.py  coeffs_highFlow.npy  contrastive_features_test.ipynb  cost_highFlow.npy  image_crop_analysis.ipynb  langevin_2D_MAE_flowRate.py  langevin_2D_MAE_highFlow.py  langevin_2D_MAE_lowFlow.py  langevin_2D_test.py  langevin_2D_test_torch.py  langevin_sindy.py  langevin_sindy_pytorch.py  mae_PCA.ipynb  mae_features_test.ipynb  mae_features_torch.ipynb  track_data_plots.py  track_filtering.py  track_validation.py  tracking_integration_fms_upload.py  vis_cdh5_nodes_and_edges_analysis.py
cellsmap/analyses/bf_analysis/: brightfield_PCA.py  brightfield_corrected_highFlow.py  brightfield_corrected_lowFlow.py  brightfield_highFlow.py
cellsmap/analyses/brightfield/: brightfield_PCA.ipynb  langevin_2D_bf_highFlow.py  langevin_2D_bf_lowFlow.py  langevin_2D_bfcorr_highFlow.py  langevin_2D_bfcorr_highFlow.py.py  langevin_2D_bfcorr_lowFlow.py  langevin_2D_bfcorr_lowFlow.py.py
cellsmap/analyses/cdh5_small_patch/: small_patch_highFlow.py  small_patch_lowFlow.py
cellsmap/analyses/cell_predictions/: =  =3.0
cellsmap/analyses/configs/: dynamics_config.yaml  dynamics_fit_config.py  dynamics_postproc_config.py  dynamics_viz_config.py  manifest_postproc_config.py
cellsmap/analyses/data/: MAE_95pctVarPCs_all.npy  MAE_95pctVarPCs_highFlow.npy  MAE_95pctVarPCs_lowFlow.npy  MAE_ExpVar.npy  MAE_PCs.npy  MAE_SVs.npy
cellsmap/analyses/flow/: flow_calculator.py  flow_features.py  optical_flow_calculator.py  optical_flow_features.py
cellsmap/analyses/immunofloursecence/: add_if_cols.py  if_feature_extraction.py  plots.py  workflow_SMAD1.py
cellsmap/analyses/immunofluorescence/: add_if_cols.py  crop_based_if_workflow.py  if_feature_extraction.py  integration_preprocess.py  integration_workflow.py  nuclear_based_if_workflow.py  plots.py  segment_nuclear_stain.py  workflow_SMAD1.py
cellsmap/analyses/integration/: feats_diffae_classic_comparison.py
cellsmap/analyses/jepa/: jepa_PCA.ipynb  jepa_feats_init.py  jepa_features_langevin_sindy.ipynb  jepa_features_sparseVFC.ipynb  langevin_2D_jepa_highFlow.py  langevin_2D_jepa_lowFlow.py
cellsmap/analyses/langevin-sindy/: fp_solvers.py  langevin_sindy.py
cellsmap/analyses/logs/: 2d_highFlow.txt  2d_lowFlow.txt
cellsmap/analyses/mae/: langevin_2D_MAE_flowRate.py  langevin_2D_MAE_highFlow.py  langevin_2D_MAE_lowFlow.py  mae_PCA.ipynb  mae_feats_init.py  mae_features_sparseVFC.ipynb
cellsmap/analyses/mae_seg/: mae_seg_highFlow.py  mae_seg_lowFlow.py
cellsmap/analyses/notebooks/: jepa_PCA.ipynb  jepa_features_analysis.ipynb  jepa_features_langevin_sindy.ipynb  jepa_features_sparseVFC.ipynb  mae_PCA.ipynb  mae_features_sparseVFC.ipynb  mae_features_spike.ipynb
cellsmap/analyses/nuclei_predictions/: compare_nuc_pred_from_label_free.py  generate_label_free_nuc_pred.py  (+3 more)
cellsmap/configs/: dataset_config.py
cellsmap/contrastive/: apply_model.py  instruction.md
cellsmap/extras/: metadata.py  zarr_conversion.py  zarr_conversion_workflow.py
cellsmap/features/: cdh5_classic_seg.py  cdh5_classic_seg_tracking.py  cdh5_get_measured_features.py  cdh5_nodes_and_edges.py  cdh5_nodes_and_edges_concatenate_tables.py  cdh5_seg_density_map.py  cdh5_seg_density_map_correlations.py  initial_test_cadherin.py  initial_test_cadherin_ROUGH.py  initial_test_tubulin.py  labelfree_nuclei_tracking.py  lib_tracking.py  nuc_get_measured_features.py
cellsmap/image_conversion/: raw_img_to_zarr.py  sldy_to_zarr.py  zarr_check.py
cellsmap/image_visualization/: brightfield.py  raw_data_review.py
cellsmap/model_features/: apply_array_model_example.py  apply_model.py  apply_on_crop.py  diffae_finetune.py  feature_viz.py  generate_csv_for_training.py  generate_image.py  instruction.md  latent_walk.py  make_spatial_pc_movie.py  paired_data_validation.py
cellsmap/segmentation_workflow/: Readme.MD  nuclei_segmentation_workflow.py  tracking_ultrack_endo_multiseg.py  tracking_ultrack_endo_multiseg_cell.py
cellsmap/util/: __init__.py  cdh5_preprocessing.py  cdh5_seg_config.yaml  dataset_io.py  general_image_preprocessing.py  get_sldy_metadata.py  image_preprocessing.py  io.py  manifest_io.py  manifest_pca.py  pca.py  set_ouput.py  set_output.py  shape_features.py
cellsmap/vis/: get_crops_from_dataframe.py  get_images.py  image_processing.py
docs/: configs_and_manifests.md  custom_cli_types.md  model_training_and_evaluation.md
list/: pyvenv.cfg
mlruns/0/: meta.yaml
scripts/: migrate_model_qc_json_to_parquet.py  zarr_check.py
src/endo_pipeline/: __init__.py  __main__.py  figure.mplstyle
tests/: check_data_config_fields_exist.py  check_data_config_filepaths.py  check_zarr_channels.py  multiproc_mwe.py  test_io.py  test_load_movie.py
tests/endo_pipeline/: test_import_workflows.py
(+1401 files in other folders)
