[project]
name = "cellsmap"
version = "0.1.0"
description = ""
authors = [
    {name = "", email = ""},
]

dependencies = [
    "bioio>=1.4.0",
    "bioio-base>=1.0.5",
    "bioio-nd2>=1.0.1",
    "bioio-ome-tiff>=1.0.1",
    "bioio-ome-zarr>=1.1.1",
    "bioio-sldy>=1.0.3",
    "bioio-tifffile>=1.0.1",
    "colorcet>=3.1.0",
    "fastparquet>=2024.11.0",
    "fipy>=3.4.5",
    "fire>=0.6.0",
    "ipykernel>=6.29.5",
    "itkwasm==1.0b171",
    "jupyter>=1.0.0",
    "matplotlib>=3.10",
    "ngff-zarr==0.8.2",
    "notebook==7.2.1",
    "numdifftools==0.9.41",
    "numpy>=1.2.3",
    "pandas==2.2.2",
    "pathlib>=1.0.1",
    "pyarrow<=19.0.1",
    "pysindy>=1.7.5",
    "pytest>=8.2.2",
    "scikit-image==0.22.0",
    "scikit-learn==1.5.1",
    "scipy==1.13.1",
    "seaborn>=0.13.2",
    "sympy==1.13.1",
    "tqdm>=4.66.5",
    # specifying wasmtime < 23.0 is currently needed because our slurm nodes are on Ubuntu 18 and don't have GLIBC_2.28
    "vtk>=9.4.1", 
    "wasmtime<22.0",
]
requires-python = "<3.11,>=3.10"
readme = "README.md"
license = {text = "AISL"}

[project.optional-dependencies]
internal = [
    "aicsfiles>=7.10.0", # internal package
]
ml_workflows = [
    "cyto-dl>=0.4.0",
    "hydra-core>=1.3.2",
    "monai>=1.4.0",
    "mlflow>=2.21.2",
]
cellpose = [
    "cellpose>=3.1",
    "torch==1.13.1+cu116",
    "torchvision==0.14.1+cu116",
    "torchaudio==0.13.1",
]

[build-system]
requires = ["pdm-pep517>=1.0"]
build-backend = "pdm.pep517.api"

[tool.pytest.ini_options]
testpaths = "tests/"

[tool.mypy]
packages = "cellsmap"
# Relax the checks by ignoring specific error codes
disable_error_code = [
    "call-overload", 
    "var-annotated", 
    "import-untyped",
]

[[tool.mypy.overrides]]
# The following dependencies are untyped. mypy should ignore them
module = [
    "fire",
    "fplanck.utility",
    "cyto_dl",
    "cyto_dl.api",
    "cyto_dl.utils",
    "fipy",
    "kramersmoyal",
    "matplotlib",
    "matplotlib.gridspec",
    "pysindy",
    "scipy",
    "scipy.sparse",
    "scipy.linalg",
    "scipy.optimize",
    "scipy.integrate",
    "scipy.stats",
    "scipy.signal",
    "scipy.ndimage",
    "sklearn",
    "sklearn.decomposition",
    "sklearn.preprocessing",
    "sklearn.linear_model",
    "sklearn.model_selection",
    "sympy",
]
ignore_missing_imports = true

[tool.pdm.dev-dependencies]
dev = [
    "mypy>=1.15.0",
    "pandas-stubs>=2.2.3.250308",
    "types-python-dateutil>=2.9.0.20241206",
    "types-PyYAML>=6.0.12.20241230",
    "typing_extensions>=4.12.2",
    "types-seaborn>=0.13.2.20250111",
    "types-tqdm>=4.67.0.20250301",
    "types-requests>=2.32.0.20250306",
]
