[project]
name = "cellsmap"
version = "0.1.0"
description = ""
authors = [
    { name = "Erin Angelini", email = "erin.angelini@alleninstitute.org"},
    { name = "Philip Garrison", email = "philip.garrison@alleninstitute.org"},
    { name = "Chantelle Leveille", email = "chantelle.leveille@alleninstitute.org" },
    { name = "Benjamin Morris", email = "benjamin.morris@alleninstitute.org"},
    { name = "Serge Parent", email = "serge.parent@alleninstitute.org"},
    { name = "Matheus Viana", email = "matheus.viana@alleninstitute.org"},
    { name = "Jessica Yu", email = "jessica.yu@alleninstitute.org"},
]

dependencies = [
    "bioio>=1.4.0",
    "bioio-base>=1.0.5",
    "bioio-imageio>=1.1.0",
    "bioio-nd2>=1.0.1",
    "bioio-ome-tiff>=1.0.1",
    "bioio-ome-zarr>=1.1.1",
    "bioio-sldy>=1.0.3",
    "bioio-tifffile>=1.0.1",
    "colorcet>=3.1.0",
    "colorizer-data",
    "cyclopts>=3.22.2",
    "deprecated>=1.2.18",
    "fastparquet>=2024.11.0",
    "fipy>=3.4.5",
    "fire>=0.6.0",
    "gitpython>=3.1.44",
    "ipykernel>=6.29.5",
    "jupyter>=1.0.0",
    "mashumaro>=3.16",
    "matplotlib>=3.10",
    "ngff-zarr==0.8.2",
    "notebook==7.2.1",
    "numdifftools==0.9.41",
    "numpy>=1.2.3",
    "opencv-python>=4.11.0",
    "pandas==2.2.2",
    "pathlib>=1.0.1",
    "pyarrow<=19.0.1",
    "pysindy>=1.7.5",
    "scikit-image==0.22.0",
    "scikit-learn==1.5.1",
    "scipy==1.13.1",
    "seaborn>=0.13.2",
    "sympy==1.13.1",
    "torch~=2.0.0",
    "tqdm>=4.66.5",
    "vtk>=9.4.1",
]

requires-python = ">=3.11,<3.12"
readme = "README.md"
license = { text = "AISL" }

[project.optional-dependencies]
internal = [
    "aicsfiles>=7.10.0",
]
ml_workflows = [
    "cyto-dl>=0.6.1",
    "hydra-core>=1.3.2",
    "mlflow>=2.21.2",
]
cellpose = [
    "cellpose>=3.1.0",
]

[dependency-groups]
dev = [
    "pre-commit>=3.7.1",
]
lint = [
    "isort<=5.13.2",
    "black>=24.4.2",
    "ruff>=0.4.6",
    "mypy>=1.10.0",
]
test = [
    "pytest>=8.2.2",
    "pytest-cov>=5.0.0",
    "pytest-raises>=0.11",
    "coverage>=7.5.3",
    "pytest-subtests>=0.13.1",
    "pytest-mock>=3.14.1",
]
docs = [
    "jupytext>=1.16.2",
    "sphinx>=7.3.7",
    "furo>=2024.5.6",
    "myst-parser>=3.0.1",
    "sphinx-copybutton>=0.5.2",
]
types = [
    "types-PyYAML>=6.0.12.20241230",
    "pandas-stubs>=2.2.3.250308",
    "types-tqdm>=4.67.0.20250301",
    "types-seaborn>=0.13.2.20250111",
]

[project.scripts]
endopipe = "src.endo_pipeline.__main__:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
default-groups = ["dev", "lint", "test", "docs", "types"]
cache-dir = ".cache/uv"

[tool.uv.sources]
aicsfiles = { index = "artifactory" }
colorizer-data = { git = "https://github.com/allen-cell-animated/colorizer-data.git", rev = "v1.6.3" }

[[tool.uv.index]]
name = "artifactory"
url = "https://artifactory.corp.alleninstitute.org/artifactory/api/pypi/pypi-virtual/simple"
explicit = true

[tool.black]
line-length = 100

[tool.isort]
line_length = 100
profile = "black"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
extend-select = [
    "E",      # style errors
    "F",      # flakes
    "D",      # pydocstyle
    "I001",   # isort
    "UP",     # pyupgrade
    "N",      # pep8-naming
    # "S",    # bandit
    "C",      # flake8-comprehensions
    "B",      # flake8-bugbear
    "A001",   # flake8-builtins
    "RUF",    # ruff-specific rules
    "RUF100", # Unused noqa directive
]
extend-ignore = [
    "D100", # Undocumented public module
    "D104", # Undocumented public package
    "D105", # Missing docstring in magic method
    "D107", # Missing docstring in __init__
    "D202", # Blank lines between the function body and the function docstring
    "D203", # 1 blank line required before class docstring
    "D205", # 1 blank line required between summary line and description
    "D212", # Multi-line docstring summary should start at the first line
    "D213", # Multi-line docstring summary should start at the second line
    "D413", # Missing blank line after last section
    "D416", # Section name should end with a colon
]

[tool.ruff.lint.mccabe]
max-complexity = 20 # Adjust maximum McCabe complexity (C901)

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_defs = true
check_untyped_defs = true
show_error_codes = true
