[project]
name = "endo_pipeline"
version = "0.1.0"
description = ""
authors = [
    { name = "Erin Angelini", email = "erin.angelini@alleninstitute.org"},
    { name = "Philip Garrison", email = "philip.garrison@alleninstitute.org"},
    { name = "Chantelle Leveille", email = "chantelle.leveille@alleninstitute.org" },
    { name = "Benjamin Morris", email = "benjamin.morris@alleninstitute.org"},
    { name = "Serge Parent", email = "serge.parent@alleninstitute.org"},
    { name = "Matheus Viana", email = "matheus.viana@alleninstitute.org"},
    { name = "Jessica Yu", email = "jessica.yu@alleninstitute.org"},
]

dependencies = [
    "bioio>=1.4.0",
    "bioio-base>=1.0.5",
    "bioio-imageio>=1.1.0",
    "bioio-nd2>=1.0.1",
    "bioio-ome-tiff>=1.0.1",
    "bioio-ome-zarr>=1.1.1",
    "bioio-sldy>=1.0.3",
    "bioio-tifffile>=1.0.1",
    "cellpose>=3.1.0",
    "colorcet>=3.1.0",
    "colorizer-data",
    "cyclopts>=4.4.4",
    "deprecated>=1.2.18",
    "fastparquet>=2024.11.0",
    "fipy>=3.4.5",
    "fire>=0.6.0",
    "gitpython>=3.1.44",
    "ipykernel>=6.29.5",
    "jupyter>=1.0.0",
    "kaleido>=1.3.0",
    "mashumaro>=3.16",
    "matplotlib>=3.10",
    "ngff-zarr==0.8.2",
    "notebook==7.2.1",
    "numdifftools==0.9.41",
    "numpy>=1.2.3",
    "odrpack>=0.5.0",
    "opencv-python>=4.11.0",
    "pandas==2.2.2",
    "pathlib>=1.0.1",
    "pyarrow<=19.0.1",
    "scikit-image==0.22.0",
    "scikit-learn==1.5.1",
    "scipy==1.13.1",
    "seaborn>=0.13.2",
    "sympy==1.13.1",
    "termcolor>=3.0.1",
    "torch~=2.0.0",
    "tqdm>=4.66.5",
    "vtk>=9.4.1",
]

requires-python = ">=3.11,<3.12"
readme = "README.md"
license = { text = "AISL" }

[project.optional-dependencies]
internal = [
    "aicsfiles==8.1.1",
    "s3-tools",
]
ml_workflows = [
    "cyto-dl>=0.6.2",
    "hydra-core>=1.3.2",
    "mlflow>=2.21.2",
]

[dependency-groups]
dev = [
    "pre-commit>=3.7.1",
]
lint = [
    "isort<=5.13.2",
    "black>=24.4.2",
    "ruff>=0.4.6",
    "mypy>=1.10.0",
]
test = [
    "pytest>=8.2.2",
    "pytest-cov>=5.0.0",
    "pytest-raises>=0.11",
    "coverage>=7.5.3",
    "pytest-subtests>=0.13.1",
    "pytest-mock>=3.14.1",
    "pyfakefs>=5.10.0",
]
docs = [
    "jupytext>=1.16.2",
    "sphinx>=7.3.7",
    "furo>=2024.5.6",
    "myst-parser>=3.0.1",
    "sphinx-copybutton>=0.5.2",
]
types = [
    "types-PyYAML>=6.0.12.20241230",
    "pandas-stubs>=2.2.3.250308",
    "types-tqdm>=4.67.0.20250301",
    "types-seaborn>=0.13.2.20250111",
    "types-deprecated>=1.2.15.20250304",
]

[project.scripts]
endopipe = "endo_pipeline.cli:pipeline_cli"

[build-system]
requires = ["uv_build>=0.8.12,<0.9.0"]
build-backend = "uv_build"

[tool.uv]
default-groups = ["dev", "lint", "test", "docs", "types"]
cache-dir = ".cache/uv"

[tool.uv.sources]
aicsfiles = { index = "codeartifact" }
colorizer-data = { git = "https://github.com/allen-cell-animated/colorizer-data.git", rev = "v1.6.3" }
s3-tools = { git = "https://github.com/aics-int/aws-s3-upload-tools", rev = "v0.2.1" }

[[tool.uv.index]]
name = "codeartifact"
url = "https://production-pypi-proxy.int.allencell.org/simple"
explicit = true

[tool.black]
line-length = 100

[tool.isort]
line_length = 100
profile = "black"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
extend-select = [
    "E",      # style errors
    "F",      # flakes
    "D",      # pydocstyle
    "I001",   # isort
    "UP",     # pyupgrade
    "N",      # pep8-naming
    # "S",    # bandit
    "C",      # flake8-comprehensions
    "B",      # flake8-bugbear
    "A001",   # flake8-builtins
    "RUF",    # ruff-specific rules
    "RUF100", # Unused noqa directive
]
ignore = [
    "D100", # Undocumented public module
    "D104", # Undocumented public package
    "D105", # Missing docstring in magic method
    "D107", # Missing docstring in __init__
    "D202", # Blank lines between the function body and the function docstring
    "D203", # 1 blank line required before class docstring
    "D205", # 1 blank line required between summary line and description
    "D212", # Multi-line docstring summary should start at the first line
    "D213", # Multi-line docstring summary should start at the second line
    "D413", # Missing blank line after last section
    "D416", # Section name should end with a colon
    "RUF100", # Intending to unignore, only after all the rules below are unignored: unused-noqa
    "E501", # Intending to unignore: line-too-long
    "D103", # Intending to unignore: undocumented-public-function
    "D401", # Intending to unignore: non-imperative-mood
    "N803", # Intending to unignore: invalid-argument-name
    "N806", # Intending to unignore: non-lowercase-variable-in-function
    "D102", # Intending to unignore: undocumented-public-method
    "D417", # Intending to unignore: undocumented-param
    "B006", # Intending to unignore: mutable-argument-default
    "E731", # Intending to unignore: lambda-assignment
    "D400", # Intending to unignore: missing-trailing-period
    "D404", # Intending to unignore: docstring-starts-with-this
    "D415", # Intending to unignore: missing-terminal-punctuation
    "UP038", # Intending to unignore: non-pep604-isinstance
    "E402", # Intending to unignore: module-import-not-at-top-of-file
    "B007", # Intending to unignore: unused-loop-control-variable
    "D200", # Intending to unignore: unnecessary-multiline-docstring
    "RUF005", # Intending to unignore: collection-literal-concatenation
    "RUF015", # Intending to unignore: unnecessary-iterable-allocation-for-first-element
    "B035", # Intending to unignore: static-key-dict-comprehension
]

[tool.ruff.lint.mccabe]
max-complexity = 20 # Adjust maximum McCabe complexity (C901)

[tool.mypy]
disallow_untyped_defs = true
check_untyped_defs = true
show_error_codes = true
# This line should be removed when errors listed are resolved
disable_error_code = ["no-untyped-def"]

[[tool.mypy.overrides]]
# This section should not be removed: we don't have control over these external packages
module = [
    "aicsfiles.*",
    "boto3.*",
    "botocore.*",
    "cellpose.*",
    "colorizer_data.*",
    "cv2.*",
    "cyto_dl.*",
    "fire.*",
    "hydra.*",
    "lightning.*",
    "mlflow.*",
    "monai.*",
    "mpl_toolkits.*",
    "networkx.*",
    "numdifftools.*",
    "omegaconf.*",
    "scipy.*",
    "sklearn",
    "sklearn.*",
    "s3_uploader.*",
    "threadpoolctl.*",
    "torchmetrics.*",
    "vtk.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
# This section should not be removed: archived workflows should be deleted or moved out
# of `archive/` if they are to be maintained
module = [
    "endo_pipeline.workflows.archive.*"
]
disable_error_code = ["call-overload", "operator", "import-not-found"]

[[tool.mypy.overrides]]
# This section should be removed when errors in the listed modules are resolved
module = [
    "endo_pipeline.library.analyze.*",
]
disable_error_code = ["arg-type", "attr-defined", "union-attr", "return-value", "misc", "has-type", "index"]

[[tool.mypy.overrides]]
# This section should be removed when errors in the listed modules are resolved
module = [
    "endo_pipeline.workflows.*"
]
disable_error_code = ["arg-type", "assignment", "attr-defined", "name-defined", "operator", "union-attr"]

[[tool.mypy.overrides]]
# This section should be removed when errors in the listed modules are resolved
module = [
    "endo_pipeline.workflows.figures.*"
]
disable_error_code = ["index", "call-overload"]

[[tool.mypy.overrides]]
# This section should be removed when "arg-type" errors in the listed modules are resolved
module = [
    "endo_pipeline.workflows.figures.supp_fig_z_slice_selection_nb",
]
disable_error_code = ["arg-type"]

[[tool.mypy.overrides]]
# This section should be removed when errors in the listed modules are resolved
module = [
    "endo_pipeline.workflows.production.*"
]
disable_error_code = ["arg-type"]

[[tool.mypy.overrides]]
# This section should be removed when errors in the listed modules are resolved
module = [
    "endo_pipeline.library.model.model_config_overrides"
]
disable_error_code = ["misc", "operator", "union-attr"]

[[tool.mypy.overrides]]
# This section should be removed when errors in the listed modules are resolved
module = [
    "endo_pipeline.library.model.diffae.diffusion_autoencoder"
]
disable_error_code = ["assignment"]

[[tool.mypy.overrides]]
# This section should be removed when errors in the listed modules are resolved
module = [
    "endo_pipeline.library.process.*"
]
disable_error_code = ["arg-type", "assignment", "union-attr", "return-value"]

[[tool.mypy.overrides]]
# This section should be removed when errors in the listed modules are resolved
module = [
    "endo_pipeline.configs.dataset_config_utils"
]
disable_error_code = ["return-value"]
